# damask-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASING.md  audit-2026-07.md  spec-0.8-delta.md  spec.md
.claude/: CLAUDE.md  settings.json
.claude/skills/damask/: SKILL.md
.damask/: .active_ns  .gitattributes  .gitignore  config.json
.damask/edges/: architecture.jsonl  code-fixes.jsonl  codebase-review.jsonl  competitive-analysis.jsonl  customer-feedback.jsonl  decisions.jsonl  genesis.jsonl  invariants.jsonl  spec-compliance.jsonl  spec-gap.jsonl
.github/workflows/: ci.yml  release.yml
crates/damask-cli/: Cargo.toml
crates/damask-cli/src/: app.rs  ck.rs  error.rs  main.rs
crates/damask-cli/src/commands/: at.rs  batch.rs  blame.rs  bootstrap.rs  briefing.rs  claude_skill.md  close.rs  codex_skill.md  compact.rs  confirm.rs  diff.rs  dispute.rs  edge.rs  endorse.rs  enrich.rs  follow.rs  harvest.rs  help.rs  helpers.rs  init.rs  lint.rs  log.rs  mod.rs  ns.rs  orient.rs  peek.rs  record.rs  resolve.rs  review.rs  search.rs  span.rs  status.rs  sweep.rs  tag.rs  triage.rs  tui.rs  verify.rs  where_cmd.rs  why.rs
crates/damask-cli/src/output/: glyphs.rs  human.rs  json.rs  mod.rs  render.rs
crates/damask-cli/tests/: cli_integration.rs
crates/damask-core/: Cargo.toml
crates/damask-core/src/: config.rs  edge.rs  fact.rs  freshness.rs  id.rs  lib.rs  payload.rs  span.rs  vocabulary.rs
crates/damask-resolve/: Cargo.toml
crates/damask-resolve/src/: content_hash.rs  lib.rs
crates/damask-store/: Cargo.toml
crates/damask-store/src/: decay.rs  lib.rs  lint.rs  predicate.rs  project.rs  ranking.rs  state.rs
crates/damask-store/src/index/: build.rs  mod.rs  query.rs  schema.rs
crates/damask-store/src/jsonl/: mod.rs  reader.rs  writer.rs
crates/damask-tui/: Cargo.toml
crates/damask-tui/src/: app.rs  input.rs  lib.rs  theme.rs
crates/damask-tui/src/views/: at_view.rs  dashboard.rs  edge_detail.rs  explorer.rs  graph.rs  help.rs  log_view.rs  mod.rs
editors/vscode/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
scripts/: coldstart-bench.sh
