[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/runonthespot/damask"

[workspace.dependencies]
# Internal
damask-core = { path = "crates/damask-core" }
damask-store = { path = "crates/damask-store" }
damask-resolve = { path = "crates/damask-resolve" }
damask-tui = { path = "crates/damask-tui" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Git
git2 = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal colors
owo-colors = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
