[workspace]
resolver = "2"
members = ["crates/*"]
# damask-tui is mothballed (retired 2026-07-13): the VS Code extension now
# serves visual graph browsing better, and the untested TUI was build drag.
# Kept in-tree for a one-commit revival — drop this exclude and restore the
# `tui` subcommand + damask-cli dependency to bring it back.
exclude = ["crates/damask-tui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/runonthespot/damask-rs"

[workspace.dependencies]
# Internal — version alongside path so the workspace is publishable to
# crates.io (publish order: core → resolve → store → cli).
damask-core = { path = "crates/damask-core", version = "0.1.0" }
damask-store = { path = "crates/damask-store", version = "0.1.0" }
damask-resolve = { path = "crates/damask-resolve", version = "0.1.0" }
# damask-tui dependency kept for revival; the crate is excluded from the
# workspace build (see [workspace].exclude) and unused while mothballed.
damask-tui = { path = "crates/damask-tui", version = "0.1.0" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
ulid = { version = "1", features = ["serde"] }

# Hashing
sha2 = "0.10"

# Git
git2 = "0.19"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Terminal colors
owo-colors = "4"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
