[package]
name = "damask"
description = "A knowledge fabric for agents — CLI tool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "damask"
path = "src/main.rs"

[dependencies]
damask-core = { workspace = true }
damask-store = { workspace = true }
damask-resolve = { workspace = true }
damask-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
