[package]
name = "damask"
description = "A knowledge fabric for AI agents — structured, code-anchored memory that follows the code, self-prunes, and grows more trustworthy as sessions confirm it"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["ai", "agents", "knowledge", "annotations", "memory"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "damask"
path = "src/main.rs"

[dependencies]
damask-core = { workspace = true }
damask-store = { workspace = true }
damask-resolve = { workspace = true }
damask-tui = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
owo-colors = { workspace = true }
chrono = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/damask-{ target }.tar.gz"
pkg-fmt = "tgz"
